--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,10 +14,11 @@
         <% end %>
         
     </div><!-- /.navbar-collapse -->  
-      <div class="logo-sweet">
-        <%= image_tag "Sweet-street-logo.png" %>
-        
-          <a id="box-link" href="/storepic"></a>
+      <div class="logo-sweet">       
+        <a id="box-link" href="/storepic"></a>
+        <div class="logo">
+         <%= image_tag "Sweet-street-logo.png" %>
+        </div>
       </div>
           
         
