--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,156 +1,99 @@
 <div class="container-fluid">
-  <head>
-  </head>
-  <div ng-app="app">
-    <div ng-controller="productCtrl"> 
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <% @layouts.each do |l| %>
-        <% if user_signed_in? && current_user.admin? %> 
-        <button><%= link_to 'EDIT Layout', edit_layout_path(l.id) %><%= l.photo %></button>
-        <% end %>
-        <% if l.active %>
-        <p class="animated slideInRight " ><img src='<%= l.photo %>'></p>
-        <% end %>
-        <% end %>
-        
-    </div><!-- /.navbar-collapse -->  
-      <div class="logo-sweet">       
-        <a id="box-link" href="/storepic"></a>
-        <div class="logo">
-         <%= image_tag "Sweet-street-logo.png" %>
-        </div>
+ 
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <% @layouts.each do |l| %>
+      <% if user_signed_in? && current_user.admin? %> 
+      <button><%= link_to 'EDIT Layout', edit_layout_path(l.id) %><%= l.photo %></button>
+      <% end %>
+      <% if l.active %>
+      <a class="animated slideInRight " ><img src='<%= l.photo %>'></a>
+      <% end %>
+      <% end %>       
+  </div><!-- /.navbar-collapse -->  
+
+    <div class="logo-sweet">       
+      <a id="box-link" href="/storepic"></a>
+      <div class="logo">
+       <%= image_tag "Sweet-street-logo.png" %>
       </div>
-          
-        
+    </div>
 
-      
-      <section class="slider">
-        <div class="container-fluid">
-          <div id="main-carousel" class="carousel slide" data-ride="carousel">
-            <!-- Wrapper For Slides Starts -->
-            <div class="carousel-inner">
+  <section class="slider">
+    <div id="main-carousel" class="carousel slide" data-ride="carousel">
+      <!-- Wrapper For Slides Starts -->
+      <div class="carousel-inner">
 
-              <div class="item active">
-                <center><%= image_tag "Chocolate-Popcorn-Tin2.png" %></a></center>                
-              </div>
-              <!-- 473 -->
-
-              <div class="item">
-                <center><%= image_tag "caramel-apples.png" %></center>
-              </div>
-
-              <div class="item">
-                <center><%= image_tag "pop-banner2.png" %></center>
-              </div>
-
-              <div class="item">
-                <center><%= image_tag "lolipops.png" %></center>
-              </div>
-
-              <div class="item">
-                <center><%= image_tag "shaved-collage.png" %></center>
-              </div>
-
-              <div class="item">
-                <center><%= image_tag "popcorn-tin-1.png" %></center>
-              </div>
-
-              <div class="item">
-                <center><%= image_tag "cotton-candy2.png" %></center>
-              </div>
-
-
-              <div class="item">
-                <center><br><%= image_tag "choc-dip-strawberry3.png" %></center>
-              </div>
-
-              <div class="item">
-                <center><br><%= image_tag "Retro-Popcorn.png" %></center>
-              </div>
-
-            </div>
-            <!-- Wrapper For Slides Ends -->
-            <!-- Controls Starts -->
-              <a class="left carousel-control" href="#main-carousel" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-              </a>
-              <a class="right carousel-control" href="#main-carousel" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-              </a>
-            <!-- Controls Ends -->
-          </div>        
+        <div class="item active">
+          <center><%= image_tag "Chocolate-Popcorn-Tin2.png" %></a></center>                
         </div>
-      </section>
-        <!-- search begins -->
-        <%#= form_tag("/search", method: "get") do %>
-        <%#= label_tag(:q, "Search for:") %>
-        <%#= text_field_tag(:q) %>
-        <%#= submit_tag("Search") %>
-        <%# end %>
-        <!-- search ends -->
+        <!-- 473 -->
 
-        <!-- <center><h3 class="product-header">Popcorn - Candy - Tropical Sno Shaved Ice - Chocolate Dipped Strawberries - and so much MORE!</h3></center> -->
-        <% if user_signed_in? && current_user.admin? %> 
-          <button type="button" class="btn btn-success"><a href="/products/new"><h5>ADD A NEW Product</h5></a></button>
-          <% end %>
-         <div class="container-fluid">
-        <% @products.each do |p| %>
-        <div class="col-md-3 col-sm-3 col-xs-12 bor">
-        <h4 id="product-header">
-          <a href="/products/<%=p.id%>"><%= p.name %></h4>
-            
-        <p class='img-thumbnail'><% if p.special? %>
-          <div class="special"><a href=""><%= image_tag "specials.png" %></a></a></div>
-            
-            <% end %>
-          <img src='<%= p.photo %>'  height="140" width="auto" ></a></p>
+        <div class="item">
+          <center><%= image_tag "caramel-apples.png" %></center>
+        </div>
+
+        <div class="item">
+          <center><%= image_tag "pop-banner2.png" %></center>
+        </div>
+
+        <div class="item">
+          <center><%= image_tag "lolipops.png" %></center>
+        </div>
+
+        <div class="item">
+          <center><%= image_tag "shaved-collage.png" %></center>
+        </div>
+
+        <div class="item">
+          <center><%= image_tag "popcorn-tin-1.png" %></center>
+        </div>
+
+        <div class="item">
+          <center><%= image_tag "cotton-candy2.png" %></center>
+        </div>
+
+
+        <div class="item">
+          <center><br><%= image_tag "choc-dip-strawberry3.png" %></center>
+        </div>
+
+        <div class="item">
+          <center><br><%= image_tag "Retro-Popcorn.png" %></center>
+        </div>
+
+      </div>
+      <!-- Wrapper For Slides Ends -->
+      <!-- Controls Starts -->
+        <a class="left carousel-control" href="#main-carousel" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="right carousel-control" href="#main-carousel" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+      <!-- Controls Ends -->
+    </div>        
+  </section>
+
+  <% if user_signed_in? && current_user.admin? %> 
+    <button type="button" class="btn btn-success"><a href="/products/new"><h5>ADD A NEW Product</h5></a></button>
+  <% end %>
          
-          <% if user_signed_in? && current_user.admin? %>
+      <% @products.each do |p| %>
+      <div class="col-md-3 col-sm-3 col-xs-12 bor">
+        <h4 id="product-header">
+          <a href="/products/<%=p.id%>"><%= p.name %></h4>           
+            <p class='img-thumbnail'><% if p.special? %>
+              <div class="special"><a href=""><%= image_tag "specials.png" %></a></a>
+              </div>           
+      <% end %>
+       <img src='<%= p.photo %>'  height="140" width="auto" ></a></p>
+         
+        <% if user_signed_in? && current_user.admin? %>
           <button><%= link_to 'EDIT Product', edit_product_path(p.id) %></button>
             <a data-confirm="Are you sure?" data-method="delete" href="/products/<%= p.id %>" rel="nofollow"><button type="button" class="btn btn-danger">Delete Product</button></a>
-          <% end %>
-        </div>
         <% end %>
       </div>
-        
-    
-
-      <!-- <div id="reviews">
-
-        <table class="table table-striped table-bordered table-responsive">
-          <thead>
-            <tr>
-              <th class="bg-color">Review</th>
-              <th class="bg-color">Rating</th>
-              <th class="bg-color">Reviewer</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr ng-repeat="review in reviews track by $index" ng-if="positive(review.text)">
-            <td>{{ review.text }}</td>
-            <td>{{ review.rating }}</td>
-            <td>{{ review.reviewer }}</td>
-            </tr>
-          </div>
-        </table>
-
-          <label>Review:</label>
-          <input ng-model="newReviewText">
-          <label>Rating (1 - 5):</label>
-          <input ng-model="newReviewRating">
-          <label>Name:</label>
-          <input ng-model="newReviewName">
-          <button ng-click="addReview(newReviewText,newReviewRating, newReviewName)">Add Review</button>
-      </div> -->
-
-    </div>
-  </div>
-          <div class="embed-responsive embed-responsive-16by9" ><iframe class="embed-responsive-item" width="250" height="170" src="https://www.youtube.com/embed/aOcdaMEVNtw" frameborder="0" allowfullscreen ></iframe>
-          </div><br>
-
+      <% end %>
+        <div class="embed-responsive embed-responsive-16by9" ><iframe class="embed-responsive-item" width="250" height="170" src="https://www.youtube.com/embed/aOcdaMEVNtw" frameborder="0" allowfullscreen ></iframe>
+        </div><br>
 </div>
-
-
-    <!-- Slider Section Ends -->
-    <!-- 3 Column Banners Starts -->
-    
