trying css change

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,10 @@
+<!DOCTYPE html>
+<html>
 <head>
-<meta name="viewport" content="width=devise-width, initial-scale=1.0">
+  <title>SweetStreet</title>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= csrf_meta_tags %>
 </head>
 <div class="container-fluid">
 
