--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -18,7 +18,7 @@ body {
 
 .logo-sweet{
   position: relative;
-  width: 1200px;
+  width: 750px;
   height: 500px;
   border-left: 20px solid #392914;
   border-right: 20px solid #392914;
@@ -29,7 +29,7 @@ body {
   margin-left: 5px;
   margin-right: 5px;
   background-image: url("store-pic-1.jpg");
-  background-repeat: no-repeat;
+  background-repeat: repeat;
 }
 
 #box-link { 
