--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -162,8 +162,7 @@ color: white;
     z-index: +1;
 }
 .header-background{
-  position: absolute;
-    left: 30px;
-    top: 50px;
+  position: relative;
+    
     z-index: -1;
 }
