--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,9 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <div class="container-fluid">
-
+  <div class="jumbotron">
+      <%= image_tag "Sweet-street-logo.png" %>       
+      
+        
+  <p><a class="btn btn-primary btn-lg" href="/aboutus" role="button">Learn About Us</a></p>
+</div>
    
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <% @layouts.each do |l| %>
         <% if user_signed_in? && current_user.admin? %> 
         <button><%= link_to 'EDIT Layout', edit_layout_path(l.id) %><%= l.photo %></button>
@@ -18,19 +23,7 @@
         <a class="animated slideInRight " ><img src='<%= l.photo %>'></a>
         <% end %>
         <% end %>       
-    </div><!-- /.navbar-collapse -->  
-
-      <div class="logo-sweet">       
-        <a id="box-link" href="/storepic"></a>
-        <div class="logo">
-         <%= image_tag "Sweet-street-logo.png" %>
-        </div>
-      </div>
-          
-        
-
-      
-     
+    </div><!-- /.navbar-collapse -->       
         <section class="slider">
           <div id="main-carousel" class="carousel slide" data-ride="carousel">
             <!-- Wrapper For Slides Starts -->
