--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -7,3 +7,14 @@
 #product-header{
   color: red;
 }
+.jumbotron{
+background-image:url("store-pic-1.jpg");
+ min-height: 500px;
+    /* Set background image to fixed (don't scroll along with the page) */
+    background-attachment: fixed;
+    /* Center the background image */
+    background-position: center;
+    /* Set the background image to no repeat */
+    background-repeat: no-repeat;
+  background-size: cover;
+}
