--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/products">Home</a>
+      <a class="navbar-brand" href="/popcorn_flavors">Popcorn Flavors</a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
