--- a/app/views/popcorn_flavors/index.html.erb
+++ b/app/views/popcorn_flavors/index.html.erb
@@ -1,18 +1,28 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>SweetStreet</title>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= csrf_meta_tags %>
+</head>
 <div class="container-fluid">
+  <% if @popcorn_flavors %>
+    <% @popcorn_flavors.each do |flavor| %>
   <div class="col-md-3 col-sm-3 col-xs-12 bor">
-    <% if @popcorn_flavors %>
-      <% @popcorn_flavors.each do |flavor| %>
-        <p><a href="/popcorn_flavors/<%=flavor.id%>"><%= flavor.name %><br>
-        <img src='<%= flavor.photo %>'  height="140" width="auto" ></a></p>
-          <% if user_signed_in? && current_user.admin? %>
-            <button><%= link_to 'EDIT Popcorn Flavor', edit_popcorn_flavor_path(flavor.id) %></button>
-            <a data-confirm="Are you sure?" data-method="delete" href="/popcorn_flavors/<%= flavor.id %>" rel="nofollow"><button type="button" class="btn btn-danger">Delete Popcorn Flavor</button></a>
-          <% end %>
+    <div class="img-circle">
+    <a href="/popcorn_flavors/<%=flavor.id%>"><%= flavor.name %><br>
+    <img src='<%= flavor.photo %>'  height="140" width="auto" class="thumbnail"></a><br>
+    </div>
+      <% if user_signed_in? && current_user.admin? %>
+        <button><%= link_to 'EDIT Popcorn Flavor', edit_popcorn_flavor_path(flavor.id) %></button><br>
+          <a data-confirm="Are you sure?" data-method="delete" href="/popcorn_flavors/<%= flavor.id %>" rel="nofollow"><button type="button" class="btn btn-danger">Delete Popcorn Flavor</button></a><br>
       <% end %>
+  </div> 
     <% end %>
-  </div>
-  
-</div>
+  <% end %>
   <% if user_signed_in? && current_user.admin? %> 
     <button type="button" class="btn btn-success"><a href="/popcorn_flavors/new"><h5>ADD A NEW Popcorn Flavor</h5></a></button>
   <% end %>
+</div>
+
