--- a/app/views/products/festivals.html.erb
+++ b/app/views/products/festivals.html.erb
@@ -1,15 +1,15 @@
 <div class="container-fluid">
-  <div class="festival-pics"><h1>Festivals we are involved with!  <%= image_tag "Sweet-street-logo.png" %> Check back often! </h1>
-  </div><br>
-    <center><div style="background-color:#392914; color:white; padding:20px; border-left: 20px solid pink;
- border-right: 20px solid #DF8AB3;
- border-top: 20px solid #59462E;
- border-bottom: 20px solid #59462E;" class="treats">
+  <center>
+    
       <h2>Treats</h2>
-      <p>From Popcorn to Tropical Sno® shaved ice, Cotton Candy, Retro Pop, Caramel Apples, and Deep Fried OREOS®, We Have what you're craving! Come out to see us at one of our Festivals today!</p>
-      <img src="assets/output_T2W7Qg.gif" style="max-height: 250px; max-width: 152px;" class="img-thumbnail">
-      <img alt="Sweet trailer" src="/assets/sweet-festival.jpg" id="trailer" class="img-thumbnail" style="height: 300px;" > 
-    </div></center><br><br>
+      <h3>From Popcorn to Tropical Sno® shaved ice, Cotton Candy, Retro Pop, Caramel Apples, and Deep Fried OREOS®, We Have what you're craving! Come out to see us at one of our Festivals today!</h3>
+ 
+       
+         <img src="assets/output_T2W7Qg.gif" style="max-height: 250px; max-width: 152px;" class="img-thumbnail">         
+        <img alt="Sweet trailer" src="/assets/sweet-festival.jpg" id="trailer" class="img-thumbnail" style="height: 300px;" >
+      <h1>Festivals we are involved with!  <%= image_tag "Sweet-street-logo.png" %> Check back often! </h1></center> 
+      
+    
 <!-- calendar goes here -->
   <center><iframe src="https://www.google.com/calendar/embed?src=faqq2rac2jccnhuevt6l1podh4%40group.calendar.google.com&ctz=America/Chicago" style="border: 0" width="1200" height="550" frameborder="0" scrolling="no"></iframe></center>
 
