--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -6,12 +6,19 @@
 }
 
 .jumbotron{
-background-image:url("store-pic-1.jpg");
- min-height: 500px;
+  background-image:url("store-pic-1.jpg");
+  min-height: 500px;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+#pic-1, #pic-2{
+   width:100px;
+    height:100px;
+    border:1px solid red;
+    margin-right:10px;
+    float:left;
 }
 
 
