--- a/app/views/products/festivals.html.erb
+++ b/app/views/products/festivals.html.erb
@@ -11,7 +11,7 @@
       
     
 <!-- calendar goes here -->
-  <center><iframe src="https://www.google.com/calendar/embed?src=faqq2rac2jccnhuevt6l1podh4%40group.calendar.google.com&ctz=America/Chicago" style="border: 0" width="1200" height="550" frameborder="0" scrolling="no"></iframe></center>
+  <div class="embed-responsive embed-responsive-16by9" ><center><iframe src="https://www.google.com/calendar/embed?src=faqq2rac2jccnhuevt6l1podh4%40group.calendar.google.com&ctz=America/Chicago" style="border: 0" width="1200" height="550" frameborder="0" scrolling="no"></iframe></center></div>
 
 <div>
   
