added logo for email

--- a/app/views/ws_products/index.html.erb
+++ b/app/views/ws_products/index.html.erb
@@ -17,11 +17,11 @@
       <tr>
         <th class="bg-primary">Flavor</th>
         <th class="bg-primary">Sm Bag</th>
-        <th class="bg-primary">Lg Bag</th>
-        <th class="bg-primary">One Gal Tin</th>
-        <th class="bg-primary">Two Gal Tin</th>
-        <th class="bg-primary">3 1/2 Gal Tin</th>
-        <th class="bg-primary">6 1/2 Gal Tin</th>
+        <!-- <th class="bg-primary">Lg Bag</th> -->
+        <!-- <th class="bg-primary">One Gal Tin</th> -->
+        <!-- <th class="bg-primary">Two Gal Tin</th> -->
+        <!-- <th class="bg-primary">3 1/2 Gal Tin</th> -->
+        <!-- <th class="bg-primary">6 1/2 Gal Tin</th> -->
         <th class="bg-primary"></th>
       </tr>
     </thead>
@@ -34,25 +34,25 @@
         <%= f.text_field  :sm_bag_qty, :size => 3 %>
         <%= f.hidden_field :ws_product_id, value: product.id %>
         </td>
-        <td>$<%= product.lg_bag %><br><%= f.label :lg_bag_qty %><br>
-        <%= f.text_field  :lg_bag_qty, :size => 3 %>
-        <%= f.hidden_field :ws_product_id, value: product.id %>
-        </td>
-        <td>$<%= product.one_gal_tin %><br><%= f.label :one_gal_tin_qty %><br>
-        <%= f.text_field  :one_gal_tin_qty, :size => 3 %>
-        <%= f.hidden_field :ws_product_id, value: product.id %>
-        </td>
-        <td>$<%= product.two_gal_tin %><br><%= f.label :two_gal_tin_qty %><br>
-        <%= f.text_field  :two_gal_tin_qty, :size => 3 %>
-        <%= f.hidden_field :ws_product_id, value: product.id %>
-        </td>
-        <td>$<%= product.three_and_half_tin %><br><%= f.label :three_half_tin_qty %><br>
-        <%= f.text_field  :three_half_tin_qty, :size => 3 %>
-        <%= f.hidden_field :ws_product_id, value: product.id %>
-        </td>
-        <td>$<%= product.six_and_half_tin %><br><%= f.label :six_half_tin_qty %><br>
-        <%= f.text_field  :six_half_tin_qty, :size => 3 %>
-        <%= f.hidden_field :ws_product_id, value: product.id %></td>
+        <!-- <td>$<%#= product.lg_bag %><br><%#= f.label :lg_bag_qty %><br> -->
+        <%#= f.text_field  :lg_bag_qty, :size => 3 %>
+        <%#= f.hidden_field :ws_product_id, value: product.id %>
+        <!-- </td> -->
+        <!-- <td>$<%= product.one_gal_tin %><br><%= f.label :one_gal_tin_qty %><br> -->
+        <%#= f.text_field  :one_gal_tin_qty, :size => 3 %>
+        <%#= f.hidden_field :ws_product_id, value: product.id %>
+        <!-- </td> -->
+        <!-- <td>$<%= product.two_gal_tin %><br><%= f.label :two_gal_tin_qty %><br> -->
+        <%#= f.text_field  :two_gal_tin_qty, :size => 3 %>
+        <%#= f.hidden_field :ws_product_id, value: product.id %>
+        <!-- </td> -->
+        <!-- <td>$<%= product.three_and_half_tin %><br><%= f.label :three_half_tin_qty %><br> -->
+        <%#= f.text_field  :three_half_tin_qty, :size => 3 %>
+        <%#= f.hidden_field :ws_product_id, value: product.id %>
+        <!-- </td> -->
+        <!-- <td>$<%= product.six_and_half_tin %><br><%= f.label :six_half_tin_qty %><br> -->
+        <%#= f.text_field  :six_half_tin_qty, :size => 3 %>
+        <%#= f.hidden_field :ws_product_id, value: product.id %></td>
           <td><%= f.submit "ADD To Cart" %>
         <% end -%></td>
       </tr>
