--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,5 +1,5 @@
 <div class = "container-fluid">
-  <h1>Here is your order and cost: <%= number_to_currency @order.total %></h1>
+  <h1>Here is your order and cost: <%= number_to_currency @order.total %> for <%= @order.user.business %> <%= @order.user.address %> in <%=@order.user.city %>, <%=@order.user.state %> <%=@order.user.zip_code %></h1>
   
   <center><h3 class="bg-green">ORDER</h3></center>
   <table class="table table-striped table-bordered table-responsive">
@@ -7,11 +7,11 @@
     <tr>
       <th class="bg-primary">Name</th>
       <th class="bg-primary">Small Bag</th>
-      <th class="bg-primary">Large Bag</th>
+      <!-- <th class="bg-primary">Large Bag</th>
       <th class="bg-primary">1 Gal Tin</th>
       <th class="bg-primary">2 Gal Tin</th>
       <th class="bg-primary">3 1/2 Gal Tin</th>
-      <th class="bg-primary">6 1/2 Gal Tin</th>
+      <th class="bg-primary">6 1/2 Gal Tin</th> -->
     </tr>
    </thead>
    <tbody>
@@ -20,11 +20,11 @@
     <tr>
   <td><%= carted_product.ws_product.name %></td>
   <td><%= carted_product.sm_bag_qty %></td>
-  <td><%= carted_product.lg_bag_qty %></td>
+  <!-- <td><%= carted_product.lg_bag_qty %></td>
   <td><%= carted_product.one_gal_tin_qty %></td>
   <td><%= carted_product.two_gal_tin_qty %></td>
   <td><%= carted_product.three_half_tin_qty %></td>
-  <td><%= carted_product.six_half_tin_qty %></td>
+  <td><%= carted_product.six_half_tin_qty %></td> -->
   <% end %>
   </tr>
   </tbody>
