--- a/app/views/carted_products/index.html.erb
+++ b/app/views/carted_products/index.html.erb
@@ -19,7 +19,7 @@
   <% @carted_products.each do |each_product| %>
       <tr>
         <td><%= each_product.ws_product.name  %></td>
-        <td><strong><center><%= each_product.sm_bag_qty %></center></strong> </td>
+        <td><strong><center><button><a href="/carted_products/<%= each_product.id %>/edit">Edit</a></button>&nbsp;<a data-confirm="Are you sure?" data-method="delete" href="/carted_products/<%= each_product.id %>" rel="nofollow"><button>Delete Product</button>&nbsp;&nbsp;<%= each_product.sm_bag_qty * 50 %></center></strong> </td>
         <td><strong><center><%= each_product.lg_bag_qty  %></center></strong></td>
         <td><strong><center><%= each_product.one_gal_tin_qty %></center></strong></td>
         <td><strong><center><%= each_product.two_gal_tin_qty %></center></strong></td>
