added glyphicon cart

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
         
           <li><a href="/carted_products">
             <i class="cart" title="My Cart"></i>
-                <span class="hidden-sm hidden-xs">Shopping Cart/ Checkout </span></a>
+                <span class="glyphicon glyphicon-shopping-cart">Shopping Cart/ Checkout </span></a>
           </li>
 
        
