--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,11 +33,11 @@
       <ul class="nav navbar-nav">
         
           <% if user_signed_in? && current_user.ws_cust? %>
-          <li><a href="/ws_products">See Products available</a></li>        
+          <li><a href="/ws_products">Products available</a></li>        
         
           <li><a href="/carted_products">
             <i class="cart" title="My Cart"></i>
-                <span class="glyphicon glyphicon-shopping-cart">Shopping Cart/ Checkout </span></a>
+                <span class="glyphicon glyphicon-shopping-cart">Shopping Cart</span></a>
           </li>
 
        
