--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -12,6 +12,7 @@
       <th class="bg-primary">2 Gal Tin</th>
       <th class="bg-primary">3 1/2 Gal Tin</th>
       <th class="bg-primary">6 1/2 Gal Tin</th> -->
+      <th class="bg-primary">Adjust your order</th>
     </tr>
    </thead>
    <tbody>
@@ -19,7 +20,8 @@
   <% @order.carted_products.each do |carted_product| %>
     <tr>
   <td><%= carted_product.ws_product.name %></td>
-  <td><%= carted_product.sm_bag_qty %></td>
+  <td><%= carted_product.sm_bag_qty * 50 %></td>
+  <td><strong><button><a href="/carted_products/<%= carted_product.id %>/edit">Edit</a></button>&nbsp;<a data-confirm="Are you sure?" data-method="delete" href="/carted_products/<%= carted_product.id %>" rel="nofollow"><button>Delete Product</button></strong> </td>
   <!-- <td><%= carted_product.lg_bag_qty %></td>
   <td><%= carted_product.one_gal_tin_qty %></td>
   <td><%= carted_product.two_gal_tin_qty %></td>
