--- a/app/views/user_mailer/order_confirmation.html.erb
+++ b/app/views/user_mailer/order_confirmation.html.erb
@@ -9,6 +9,25 @@
     <h1>Thank you for your order!</h1>
     <h3>Your order total charged to your card was <%= number_to_currency @order.total %></h3>
     
+  <h3>ORDER</h3>
+    <table>
+     <thead>
+      <tr>
+        <th>Name</th>&nbsp;&nbsp;
+        <th>Small Bag</th>
+      </tr>
+     </thead>
+     
+     <tbody>
+
+      <% @order.carted_products.each do |carted_product| %>
+      <tr>
+        <td><%= carted_product.ws_product.name %></td>&nbsp;&nbsp;
+        <center><td><%= carted_product.sm_bag_qty * 50 %></td></center>
+      <% end %>
+      </tr>
+     </tbody>
+    </table>
     
     <p>We will get your order processed as soon as possible and have it ready for you.</p>
   </body>
