added url for direction to specific holidays

--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -1,5 +1,10 @@
 <div class="container-fluid">
 
-  <u><h1>Holiday Items</h1></u>
+  <u><h1>Holiday</h1></u>
+    <% if @holidays %>
+      <% @holidays.each do |holiday| %>
+      <h3><a href="/<%= holiday.url %>"><%= holiday.name %></a></h3>
+    <% end %>
+    <% end %>
 
 </div>
