--- a/app/views/christmas_items/index.html.erb
+++ b/app/views/christmas_items/index.html.erb
@@ -2,7 +2,10 @@
 <h1>Christmas Items</h1>
 
 <% @christmas_items.each do |item| %>
+<div class="col-md-3 col-sm-3 col-xs-12 bor">
 <%= item.name %>
+<img src='<%= item.photo %>'  height="140" width="auto" class="thumbnail">
 <%= item.description %>
 <% end %>
+</div>
 </div>
