added a dropdown button to free up navbar space

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,10 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
 <div ng-app="app">
     <div ng-controller="productCtrl"> 
@@ -49,8 +53,10 @@
         
         
         <!-- this is where the boolean is needed to activate a special -->
+
+
         
-        <li><a href="/festivals">Festivals</a><br /></li>
+        
         <li><a data-toggle="modal" data-target="#myModal" >
               Hours
             </a>
@@ -84,18 +90,16 @@
         </div>
         </li>
 
-        <li><a href="mailto:relroy5499@gmail.com?subject=Inquiry">Contact Us</a><br /></li>
-        <li><a href="/aboutus">About Us</a><br /></li>
-        <!-- <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Links <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="/holidays">Holidays</a></li>
+            <li><a href="/festivals">Festivals</a></li>
+            <li><a href="mailto:relroy5499@gmail.com?subject=Inquiry">Contact Us</a></li>
             <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="/aboutus">About Us</a></li>
           </ul>
-        </li> -->
+        </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </nav>
