--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,9 +54,8 @@
         
         <!-- this is where the boolean is needed to activate a special -->
 
-
-        
-        
+        <li><a href="/holidays">Holidays</a><br /></li>
+        <li><a href="/festivals">Festivals</a><br /></li>
         <li><a data-toggle="modal" data-target="#myModal" >
               Hours
             </a>
@@ -90,16 +89,18 @@
         </div>
         </li>
 
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Links <span class="caret"></span></a>
+        <li><a href="mailto:relroy5499@gmail.com?subject=Inquiry">Contact Us</a><br /></li>
+        <li><a href="/aboutus">About Us</a><br /></li>
+        <!-- <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="/holidays">Holidays</a></li>
-            <li><a href="/festivals">Festivals</a></li>
-            <li><a href="mailto:relroy5499@gmail.com?subject=Inquiry">Contact Us</a></li>
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
             <li class="divider"></li>
-            <li><a href="/aboutus">About Us</a></li>
+            <li><a href="#">Separated link</a></li>
           </ul>
-        </li>
+        </li> -->
       </ul>
     </div><!-- /.navbar-collapse -->
   </nav>
