removed a couple breaks in navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,8 +54,8 @@
         
         <!-- this is where the boolean is needed to activate a special -->
 
-        <li><a href="/holidays">Holidays</a><br /></li>
-        <li><a href="/festivals">Festivals</a><br /></li>
+        <li><a href="/holidays">Holidays</a></li>
+        <li><a href="/festivals">Festivals</a></li>
         <li><a data-toggle="modal" data-target="#myModal" >
               Hours
             </a>
