added thanksgiving items

--- a/app/views/christmas_items/index.html.erb
+++ b/app/views/christmas_items/index.html.erb
@@ -1,11 +1,19 @@
 <div class = "container-fluid" >
   <h1>Christmas Items</h1>
 
+  <% if user_signed_in? && current_user.admin? %> 
+    <button type="button" class="btn btn-success"><a href="/christmas_items/new"><h5>ADD A NEW Christmas Item</h5></a></button>
+  <% end %>
+
 <% @christmas_items.each do |item| %>
   <div class="col-md-3 col-sm-3 col-xs-12 bor">
     <p><%= item.name %></p>
     <p><img src='<%= item.photo %>'  height="140" width="auto" class="thumbnail"></p>
     <p><%= item.description %></p>
+      <% if user_signed_in? && current_user.admin? %>
+        <button><%= link_to 'EDIT Product', edit_christmas_item_path(item.id) %></button>
+        <a data-confirm="Are you sure?" data-method="delete" href="/christmas_items/<%= item.id %>" rel="nofollow"><button type="button" class="btn btn-danger">Delete Christmas Item</button></a>
+      <% end %>
   </div>
 <% end %>
 </div>
