added 2 more models and views to finish

--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -1,10 +1,21 @@
 <div class="container-fluid">
 
-  <u><h1>Holiday</h1></u>
-    <% if @holidays %>
-      <% @holidays.each do |holiday| %>
-      <h3><a href="/<%= holiday.url %>"><%= holiday.name %></a></h3>
-    <% end %>
-    <% end %>
+  
+
+    <h3><a href="/christmas_items">Christmas Items</a></h3>
+    <h3><a href="/thanksgiving_items">Thanksgiving Items</a></h3>
+    <h3><a href="/easter_items">Easter Items</a></h3>
+    <h3><a href="/valentines_items">Valentine's Day Items</a></h3>
+    <h3><a href="/sweetest_day_items">Sweetest Day Items</a></h3>
+    <h3><a href="/mothers_day_items">Mother's Day Items</a></h3>
+    <h3><a href="/fathers_day_items">Father's day Items</a></h3>
+    <h3><a href="/grand_parents_day_items">Grand Parent's Day Items</a></h3>
+    <h3><a href="/independence_day_items">Independence Day Items</a></h3>
+    <h3><a href="/st_patricks_day_items">St Patrick's Day Items</a></h3>
+    <h3><a href="/new_years_items">New Years Items</a></h3>
+    <h3><a href="/halloween_items">Halloween Items</a></h3>
+    <h3><a href="/professional_assistant_items">Professional Assistant's Day Items</a></h3>
+    <h3><a href="/teacher_appreciation_items">Teacher Appreciation Items</a></h3>
+    
 
 </div>
