added links to each holiday

--- a/app/views/professional_assistant_items/edit.html.erb
+++ b/app/views/professional_assistant_items/edit.html.erb
@@ -1,2 +1,1 @@
-<h1>ProfessionalAssistantItems#edit</h1>
-<p>Find me in app/views/professional_assistant_items/edit.html.erb</p>
+<%= render "form" %>
