--- a/app/views/professional_assistant_items/_form.html.erb
+++ b/app/views/professional_assistant_items/_form.html.erb
@@ -1,2 +1,38 @@
-<h1>ProfessionalAssistantItems#_form</h1>
-<p>Find me in app/views/professional_assistant_items/_form.html.erb</p>
+<div class="container-fluid">
+<%= form_for @professional_assistant_item do |f| %>
+
+  <div class ="row">
+
+    <div class="panel-heading">
+      <h3 class="panel-title">Professional Assistant Item</h3>
+    </div>
+      <div class="panel-body">
+        <%= f.label :name %>
+        <%= f.text_field :name, :required => true %>
+      </div>
+  </div>
+  <div class="panel-heading">
+      <h3 class="panel-title">Photo</h3>
+    </div>
+      <div class="panel-body">
+        <%= f.label :photo %>
+        <%= f.file_field :photo %> 
+        <% if @professional_assistant_item.photo %>
+        <%= image_tag @professional_assistant_item.photo_url , class: "img-responsive" %>
+        <% end %>
+      </div>
+  </div>
+  <div class="panel-heading">
+      <h3 class="panel-title">Description</h3>
+    </div>
+      <div class="panel-body">
+        <%= f.label :description %>
+        <%= f.text_field :description, :required => true %>
+      </div>
+  </div>
+  </div>
+  
+  
+  <%= f.submit %>
+<% end %>
+</div>
