--- a/app/views/professional_assistant_items/new.html.erb
+++ b/app/views/professional_assistant_items/new.html.erb
@@ -1,2 +1,1 @@
-<h1>ProfessionalAssistantItems#new</h1>
-<p>Find me in app/views/professional_assistant_items/new.html.erb</p>
+<%= render "form" %>
