--- a/app/views/teacher_appreciation_items/index.html.erb
+++ b/app/views/teacher_appreciation_items/index.html.erb
@@ -1,2 +1,19 @@
-<h1>TeacherAppreciationItems#index</h1>
-<p>Find me in app/views/teacher_appreciation_items/index.html.erb</p>
+<div class = "container-fluid" >
+  <h1>Teacher Appreciation Items</h1>
+
+  <% if user_signed_in? && current_user.admin? %> 
+    <button type="button" class="btn btn-success"><a href="/teacher_appreciation_items/new"><h5>ADD A NEW Teacher Appreciation Item</h5></a></button>
+  <% end %>
+
+<% @teacher_appreciation_items.each do |item| %>
+  <div class="col-md-3 col-sm-3 col-xs-12 bor">
+    <p><%= item.name %></p>
+    <p><img src='<%= item.photo %>'  height="140" width="auto" class="thumbnail"></p>
+    <p><%= item.description %></p>
+      <% if user_signed_in? && current_user.admin? %>
+        <button><%= link_to 'EDIT Product', edit_teacher_appreciation_item_path(item.id) %></button>
+        <a data-confirm="Are you sure?" data-method="delete" href="/teacher_appreciation_items/<%= item.id %>" rel="nofollow"><button type="button" class="btn btn-danger">Delete Teacher Appreciation Item</button></a>
+      <% end %>
+  </div>
+<% end %>
+</div>
