added pics to holidays list

--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -1,21 +1,46 @@
 <div class="container-fluid">
-
-  
-
-    <h3><a href="/christmas_items">Christmas Items</a></h3>
-    <h3><a href="/thanksgiving_items">Thanksgiving Items</a></h3>
-    <h3><a href="/easter_items">Easter Items</a></h3>
-    <h3><a href="/valentines_items">Valentine's Day Items</a></h3>
-    <h3><a href="/sweetest_day_items">Sweetest Day Items</a></h3>
-    <h3><a href="/mothers_day_items">Mother's Day Items</a></h3>
-    <h3><a href="/fathers_day_items">Father's day Items</a></h3>
-    <h3><a href="/grand_parents_day_items">Grand Parent's Day Items</a></h3>
-    <h3><a href="/independence_day_items">Independence Day Items</a></h3>
-    <h3><a href="/st_patricks_day_items">St Patrick's Day Items</a></h3>
-    <h3><a href="/new_years_items">New Years Items</a></h3>
-    <h3><a href="/halloween_items">Halloween Items</a></h3>
-    <h3><a href="/professional_assistant_items">Professional Assistant's Day Items</a></h3>
-    <h3><a href="/teacher_appreciation_items">Teacher Appreciation Items</a></h3>
-    
-
+    <div class = "items">
+        <div class="col-md-3 col-sm-3 col-xs-12 bor">
+            <h3><a href="/christmas_items">Christmas Items<%= image_tag "merry-christmas.jpg" %></a></h3>
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-12 bor">
+            <h3><a href="/thanksgiving_items">Thanksgiving Items<%= image_tag "happy-thanksgiving.jpg" %></a></h3>
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-12 bor">
+            <h3><a href="/easter_items">Easter Items<%= image_tag "happy-easter.jpg" %></a></h3>
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-12 bor">
+            <h3><a href="/valentines_items">Valentine's Day Items<%= image_tag "valentines-day.gif" %></a></h3>
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-12 bor">
+            <h3><a href="/sweetest_day_items">Sweetest Day Items<%= image_tag "sweetest-day.jpg" %></a></h3>
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-12 bor">
+            <h3><a href="/mothers_day_items">Mother's Day Items<%= image_tag "mothers-day.jpg" %></a></h3>
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-12 bor">
+            <h3><a href="/fathers_day_items">Father's day<%= image_tag "fathers-day.jpg" %></a></h3>
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-12 bor">
+            <h3><a href="/grand_parents_day_items">Grand Parent's Day<%= image_tag "grand-parents-day.jpg" %></a></h3>
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-12 bor">
+            <h3><a href="/independence_day_items">Independence Day<%= image_tag "independence-day.jpg" %></a></h3>
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-12 bor">
+            <h3><a href="/st_patricks_day_items">St Patrick's Day<%= image_tag "st-patricks-day.jpg" %></a></h3>
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-12 bor">
+            <h3><a href="/new_years_items">New Years<%= image_tag "new-years.gif" %></a></h3>
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-12 bor">
+            <h3><a href="/halloween_items">Halloween<%= image_tag "halloween.gif" %></a></h3>
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-12 bor">
+            <h3><a href="/professional_assistant_items">Professional Assistant's<%= image_tag "professional-assistant-day.jpg" %></a></h3>
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-12 bor">
+            <h3><a href="/teacher_appreciation_items">Teacher Appreciation<%= image_tag "teacher-appreciation.jpg" %></a></h3>
+        </div>   
+    </div>
 </div>
