--- a/app/assets/stylesheets/holidays.css.scss
+++ b/app/assets/stylesheets/holidays.css.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the holidays controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.items img{
+  max-height: 150px;
+}
