added a pic to slider

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -56,6 +56,10 @@
                 <center><br><%= image_tag "Retro-Popcorn.png" %></center>
               </div>
 
+              <div class="item">
+                <center><br><%= image_tag "fudge-5897eb7ac5f0126823eb58f8c961ef91.jpg" %></center>
+              </div>
+
             </div>
             <!-- Wrapper For Slides Ends -->
             <!-- Controls Starts -->
